2006-05-15  Kalpit Desai <kvdesai@email.unc.edu>
	* mypsd.m: Fixed a bug in calculation of default frequency resolution.
	* myspectrogram.m: same.
	* processpeak.m: Better handling of boundary cases. Also fixed a bug that caused program to return zero values when search frequency falled exactly between two bins.

2006-05-05  Kalpit Desai <kvdesai@email.unc.edu>
	* myspectrogram.m: Added. This function wraps the matlab-inbuilt 'spectrogram' function with parameters that are easy to understand for the user. Analogous to 'mypsd' and 'mytfe'.

2006-04-03  Jeremy Cribb <jcribb@email.unc.edu>
	* mypsd.m: fixed typo in printed output.

2005-12-22  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: 
	- Calculation of 'integrated displacement' is much efficient now.
	- Last argument, flag for calculating id, is now obsolete and ignored.
	- Improved documentation

2005-09-24  Kalpit Desai <kvdesai@cs.unc.edu>
	* processpeak.m: Made interactive. 

2005-09-13  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: 
	- Made to exit gracefully and report some plain english errors when input parameters are inconsistent. 
	- Fixed some comments.
2005-09-08  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m: Added couple of more options for window types and handled when the supplied window type is unacceptable.
2005-06-27  Jeremy Cribb <jcribb@email.unc.edu>
	* vrpn_psd.m:  fixed several syntactial errors so that vrpn_psd actually works now.
	* mypsd.m: fixed typo in documentation.

2005-01-19  Kalpit Desai <kvdesai@cs.unc.edu>
	* added processpeak.m : Takes two vectors [p,f] that are output of psd calculatios, and converts the power at particular frquency (fsearch) in to units of amplitude of sinewave at that particular frequency. A handy utility for interpreting psd data.

2005-01-10  Kalpit Desai <kvdesai@cs.unc.edu>
	* mypsd.m : fixed a typo in calculation of cumulative displacement
2004-06-11  Kalpit Desai <kvdesai@cs.unc.edu>